# it-solution-test

./: .gitignore  README.MD  db.sqlite3  manage.py  pyproject.toml
messages_api/: admin.py  models.py  test.py  urls.py  views.py
messages_api/migrations/: 0002_rename_messagesfromspace_messagefromspace.py
messages_from_space/: asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
messages_from_space/messages_api/: models.py  urls.py  views.py
messages_from_space/messages_api/migrations/: 0001_initial.py
messages_from_space/messages_from_space/: settings.py  urls.py
messages_from_space/messages_from_space/templates/: index.html
my_secrets/: definitions.py
static/: script.js
templates/: index.html
